Resolve issue with form sizing on small screens (incorrect small sizes column width)

--- a/src/assets/steemgigs.scss
+++ b/src/assets/steemgigs.scss
@@ -1994,6 +1994,7 @@ hr {
   padding: 20px;
   box-shadow: 0 3px 13px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
+  margin-bottom: 15px;
 }
 .el-collapse-item__header {
   color: black;
